# topology-first-cad

./: Cargo.toml  README.md  TASKLIST.md
crates/kernel/: Cargo.toml
crates/kernel/src/: ad.rs  eval.rs  expr.rs  glsl.rs  interval.rs  lib.rs  morse.rs  tests.rs  topology.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
ops/: morsectl
ops/nginx/: topology-first-cad.conf
ops/systemd/: morse-server.system.service  morse-server.user.service
web/: app.js  index.html  style.css
web/scripts/: bowl_well.lua  deep_well.lua  ring.lua  tube.lua
